# ClaudioKitchen

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml  requirements.txt  server.py
.github/workflows/: docker-publish.yml
