[project]
name = "claudio-kitchen"
version = "0.1.0"
description = "Remote MCP server exposing OpenRouter's multimodal APIs (image / video / TTS / transcription / embeddings / rerank) to Claude, with OIDC auth + email allowlist."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "pianonic" }]
dependencies = [
    "fastmcp>=3.4,<4",
    "httpx>=0.27,<1",
]

[tool.setuptools]
py-modules = ["server"]
